<resources>
    <string name="app_name">WordPress</string>
    <string name="url_username_password_required">Please fill in all of the fields before submitting.</string>
    <string name="xmlrpc_error">Could not connect. Please enter the full path to xmlrpc.php on your site and try again.</string>
    <string name="no_blogs_found">No Blogs Found</string>
    <string name="no_blogs_message">No %s blogs were found for that account.</string>
    <string name="additional">additional</string>
    <string name="add_all">Add All</string>
    <string name="add_selected">Add Selected</string>
    <string name="select_blogs">Select Blogs</string>
    <string name="enable_blogs">Enable blogs</string>
    <string name="no_network_title">No network available</string>
    <string name="no_network_message">There is no network available. Please connect to a network and try again.</string>
    <string name="sure_sign_out">Are you sure you want to sign out from WordPress.com?</string>
    <string name="sign_out_confirm">Are you sure you want to sign out?</string>
    <string name="please_sign_in">Please sign in again.</string>
    <string name="account_two_step_auth_enabled">This account has two step authentication enabled. Visit your security settings on WordPress.com and generate an application-specific password.</string>
    <string name="visit_security_settings">Visit Security Settings</string>
    <string name="select_categories">Select Categories</string>
    <string name="tags_and_categories">Tags &amp; Categories</string>
    <string name="tags_separate_with_commas">Tags (separate tags with commas)</string>
    <string name="post_content">Content (tap to add text and media)</string>
    <string name="dont_yet_have_a_blog">Don\'t yet have a blog?</string>
    <string name="max_thumbnail_px_width">Default image width</string>
    <string name="password">Password</string>
    <string name="get_free_blog">Get a free blog at WordPress.com</string>
    <string name="tagline">Start blogging in seconds.</string>
    <string name="i_have_wp_blog">Add blog hosted at WordPress.com</string>
    <string name="i_have_blog">Add self-hosted WordPress blog</string>
    <string name="new_to_wp">Start a new blog at WordPress.com</string>
    <string name="blogs">Blogs</string>
    <string name="account_details">Account Details</string>
    <string name="status">Status</string>
    <string name="comment_content">Comment Content</string>
    <string name="anonymous">Anonymous</string>
    <string name="post">Post</string>
    <string name="page">Page</string>
    <string name="posts">Posts</string>
    <string name="media">Media</string>
    <string name="themes">Themes</string>
    <string name="pages">Pages</string>
    <string name="about">About</string>
    <string name="username">Username</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="selected_categories">Selected categories:</string>
    <string name="publish">Publish</string>
    <string name="add_blog">Add blog</string>
    <string name="add_self_hosted_blog">Add self-hosted blog</string>
    <string name="manage_blogs">Manage blogs</string>
    <string name="show_and_hide_blogs">Show/hide blogs</string>
    <string name="blogs_visibility">Blogs visibility</string>
    <string name="show_all">Show All</string>
    <string name="hide_all">Hide All</string>
    <string name="notification_sound">Play notification sound</string>
    <string name="notification_vibrate">Vibrate</string>
    <string name="notification_blink">Blink notification light</string>
    <string name="sure_to_remove_account">Are you sure you want to remove this blog?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error">Error</string>
    <string name="could_not_remove_account">Could not remove blog.</string>
    <string name="edit_page">Edit Page</string>
    <string name="edit_post">Edit Post</string>
    <string name="add_comment">Add Comment</string>
    <string name="refreshing_categories">Refreshing Categories</string>
    <string name="attempting_categories_refresh">Attempting to refresh categories</string>
    <string name="connection_error">Connection Error</string>
    <string name="connection_error_occured">A connection error has occurred. Please try again later.</string>
    <string name="categories_refreshed">Categories refreshed</string>
    <string name="category_refresh_error">Category refresh error</string>
    <string name="incorrect_credentials">Incorrect username or password.</string>
    <string name="empty_fields">No Content Found</string>
    <string name="title_post_required">Please enter some post content or attach a media item.</string>
    <string name="cancel_edit">Cancel Edit</string>
    <string name="sure_to_cancel_edit">Are you sure you want to cancel editing this post?</string>
    <string name="new_account">New Account</string>
    <string name="upload_full_size_image">Upload and link to full image</string>
    <string name="upload_scaled_image">Upload and link to scaled image</string>
    <string name="scaled_image_error">Please enter a valid scaled width value</string>
    <string name="scaled_image">Scaled image width</string>
    <string name="load_more">Load More</string>
    <string name="load_settings">Load settings now?</string>
    <string name="immediately">Immediately</string>
    <string name="uploading">Uploading</string>
    <string name="uploading_media_item">Uploading media item #</string>
    <string name="gallery_error">Sorry, the media item could not be retrieved.</string>
    <string name="refresh">Refresh</string>
    <string name="home">Home</string>
    <string name="more_tag">More</string>
    <string name="blog_not_found">Sorry, an error occurred when attempting to access this blog.</string>
    <string name="post_not_found">Sorry, an error occurred when attempting to load the post. Please refresh your posts and try again.</string>
    <string name="wpcom">WordPress.com</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="all">All</string>
    <string name="images">Images</string>
    <string name="unattached">Unattached</string>
    <string name="custom_date" comment="one of the media page filter (others are all, images, unattached, custome date), after selecting Custom Date, you can choose a date range to filter media files">Custom Date</string>
    <string name="upload">Upload</string>
    <string name="please_wait_refresh_done">Please wait, loading items.</string>
    <string name="please_wait_uploading_done">Please wait, uploading item.</string>
    <string name="info">Info</string>
    <string name="learn_more">Learn More</string>
    <string name="media_add_popup_title">Add to media library</string>
    <string name="media_add_popup_capture_photo">Capture photo</string>
    <string name="media_add_popup_capture_video">Capture video</string>
    <string name="media_add_new_media_gallery">Create gallery</string>
    <string name="media_gallery_settings_title">Gallery Settings</string>
    <string name="media_gallery_image_order">Image Order</string>
    <string name="media_gallery_image_order_random">Random</string>
    <string name="media_gallery_image_order_reverse">Reverse</string>
    <string name="media_gallery_num_columns">Number of Columns</string>
    <string name="media_gallery_type">Type</string>
    <string name="media_gallery_type_thumbnail_grid">Thumbnail Grid</string>
    <string name="media_gallery_type_squares">Squares</string>
    <string name="media_gallery_type_tiled">Tiled</string>
    <string name="media_gallery_type_circles">Circles</string>
    <string name="media_gallery_type_slideshow">Slideshow</string>
    <string name="media_gallery_edit">Edit Gallery</string>
    <string name="pick_photo">Select photo</string>
    <string name="pick_video">Select video</string>
    <string name="media_upload_title">Upload New Media</string>
    <string name="media_upload_image_button">Image</string>
    <string name="media_upload_video_button">Video</string>
    <string name="media_upload_other_button">Other</string>
    <string name="media_upload_clear_uploaded">Clear Uploaded</string>
    <string name="media_upload_edit_button">edit</string>
    <string name="media_upload_queued_button">queued</string>
    <string name="media_upload_retry_button">retry</string>
    <string name="media_upload_uploading_button">uploading</string>
    <string name="media_no_video_title">VideoPress unavailable</string>
    <string name="media_no_video_message">Get the VideoPress upgrade to upload video!</string>
    <string name="media_edit_title_text">Title</string>
    <string name="media_edit_caption_text">Caption</string>
    <string name="media_edit_description_text">Description</string>
    <string name="media_edit_title_hint">Enter a title here</string>
    <string name="media_edit_caption_hint">Enter a caption here</string>
    <string name="media_edit_description_hint">Enter a description here</string>
    <string name="media_edit_show_likes">Show Likes</string>
    <string name="media_edit_show_sharing_buttons">Show sharing buttons</string>
    <string name="media_edit_success">Updated</string>
    <string name="media_edit_failure">Failed to update</string>
    <string name="confirm_delete_media">Are you sure you want to delete this media item?</string>
    <string name="confirm_delete_multi_media">Are you sure you want to delete these item(s)?</string>
    <string name="wait_until_upload_completes">Please wait until upload completes.</string>
    <string name="cannot_delete_multi_media_items">Some media cannot be deleted at this time. Please try again later.</string>
    <string name="tab_comments">Comments</string>
    <string name="tab_posts">Posts</string>
    <string name="tab_pages">Pages</string>
    <string name="tab_stats">Stats</string>
    <string name="themes_live_preview">Live Preview</string>
    <string name="themes_details_label">Details</string>
    <string name="themes_features_label">Features</string>
    <string name="theme_activate_button">Activate</string>
    <string name="theme_activating_button">Activating</string>
    <string name="theme_fetch_failed">Failed to fetch themes. Please try again</string>
    <string name="theme_set_failed">Failed to set theme. Please try again</string>
    <string name="theme_set_success">Successfully set theme!</string>
    <string name="spam">Spam</string>
    <string name="remove_account">Remove Blog</string>
    <string name="share_link">Share Link</string>
    <string name="view_in_browser">View in Browser</string>
    <string name="post_signature">Post signature</string>
    <string name="add_tagline">Add a signature to new posts</string>
    <string name="mark_spam">Spam</string>
    <string name="delete">Delete</string>
    <string name="approve">Approve</string>
    <string name="unapprove">Unapprove</string>
    <string name="preferences">Preferences</string>
    <string name="httpuser">HTTP username</string>
    <string name="httppassword">HTTP password</string>
    <string name="settings">Settings</string>
    <string name="http_credentials">HTTP Credentials (optional)</string>
    <string name="notifications_turn_off">Turn off</string>
    <string name="notifications_turn_off_1hr">Turn off for 1 hour</string>
    <string name="notifications_turn_off_8hr">Turn off for 8 hours</string>
    <string name="new_media">New Media</string>
    <string name="menu_search">Search</string>
    <string name="manage">Manage</string>
    <string name="reader_menu_tags">Tags</string>
    <string name="reader_btn_comment">Comment</string>
    <string name="reader_btn_like">Like</string>
    <string name="reader_btn_reblog">Reblog</string>
    <string name="reader_btn_follow">Follow</string>
</resources>