<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_browser"
        android:icon="@drawable/ab_icon_web"
        android:showAsAction="ifRoom"
        android:title="@string/view_in_browser"/>
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ab_icon_share"
        android:showAsAction="ifRoom"
        android:title="@string/share_link"/>
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ab_icon_refresh"
        android:showAsAction="never"
        android:title="@string/refresh"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:showAsAction="never"
        android:title="@string/settings"/>
    <item
            android:id="@+id/menu_signout"
            android:icon="@android:drawable/ic_menu_close_clear_cancel"
            android:showAsAction="never"
            android:title="@string/sign_out"/>
</menu>