<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainRL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_light"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/settings"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/settings_padding"
        android:paddingRight="@dimen/settings_padding">

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/sectionContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/l_section1"
                style="@style/WordPressSettingsSectionHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_details" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true" />

            <TextView
                android:id="@+id/l_httpuser"
                style="@style/WordPressSubHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/http_credentials" />

            <EditText
                android:id="@+id/httpuser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/httpuser" />

            <EditText
                android:id="@+id/httppassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true"
                android:hint="@string/httppassword" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sectionTags"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium">

            <TextView
                android:id="@+id/l_section2"
                style="@style/WordPressSettingsSectionHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/media" />

            <TextView
                android:id="@+id/l_maxImageWidth"
                style="@style/WordPressSubHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/max_thumbnail_px_width" />

            <Spinner
                android:id="@+id/maxImageWidth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp" />

            <CheckBox
                android:id="@+id/fullSizeImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/upload_full_size_image" />

            <CheckBox
                android:id="@+id/scaledImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_scaled_image" />

            <TextView
                android:id="@+id/l_scaledImage"
                style="@style/WordPressSubHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scaled_image" />

            <EditText
                android:id="@+id/scaledImageWidth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="4"
                android:inputType="number"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/sectionSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium">

            <TextView
                android:id="@+id/l_section4"
                style="@style/WordPressSettingsSectionHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manage" />

            <Button
                android:id="@+id/remove_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove_account"
                android:onClick="removeBlog" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>