<?xml version="1.0" encoding="utf-8"?>

<!--
    Contextual ActionBar menu for comment list
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_approve"
        android:icon="@drawable/ic_cab_approve"
        android:showAsAction="always"
        android:title="@string/approve" />
    <item
        android:id="@+id/menu_unapprove"
        android:icon="@drawable/ic_cab_unapprove"
        android:showAsAction="always"
        android:title="@string/unapprove" />

    <item
        android:id="@+id/menu_spam"
        android:icon="@drawable/ic_cab_spam"
        android:showAsAction="ifRoom"
        android:title="@string/spam" />

    <item
        android:id="@+id/menu_trash"
        android:icon="@drawable/ic_cab_trash"
        android:showAsAction="ifRoom"
        android:title="@string/trash" />

</menu>