<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/media_gallery_bg"
    android:orientation="vertical"
    android:padding="16dp" >

    <TextView
        android:id="@+id/media_gallery_settings_title"
        style="@style/MediaGalleryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/media_gallery_settings_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/white" />

    <TextView
        style="@style/MediaGalleryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/media_gallery_image_order" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/white" />

    <TextView
        style="@style/MediaGalleryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/media_gallery_num_columns" />

    <LinearLayout
        android:id="@+id/media_gallery_num_columns_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/white" />

    <TextView
        style="@style/MediaGalleryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/media_gallery_type" />

    <RadioGroup
        android:id="@+id/media_gallery_type_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:weightSum="4" >

        <RadioButton
            android:id="@+id/media_gallery_type_squares"
            style="@style/MediaGalleryTypeRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ab_icon_edit"
            android:text="@string/media_gallery_type_squares" />

        <RadioButton
            android:id="@+id/media_gallery_type_tiled"
            style="@style/MediaGalleryTypeRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ab_icon_edit"
            android:text="@string/media_gallery_type_tiled" />

        <RadioButton
            android:id="@+id/media_gallery_type_circles"
            style="@style/MediaGalleryTypeRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ab_icon_edit"
            android:text="@string/media_gallery_type_circles" />

        <RadioButton
            android:id="@+id/media_gallery_type_slideshow"
            style="@style/MediaGalleryTypeRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ab_icon_edit"
            android:text="@string/media_gallery_type_slideshow" />
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/white" />

</LinearLayout>